--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,10 @@ label {
   width: 100%;
 }
 
+.mb-4 {
+  margin-bottom: 1rem; /* Adds spacing between elements */
+}
+
 .bg-orange-500 {
   background-color: #ff8c00; /* Orange color */
 }
@@ -143,4 +147,14 @@ label {
 
 .hidden {
   display: none;
+}
+
+.flex-align-left {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.spacing {
+  margin-top: 0.5rem;
 }
