--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9fafb;
-  color: #333333;
+  color: #333;
 }
 
 .container {
   padding: 20px;
   max-width: 800px;
   margin: 0 auto;
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -19,7 +19,7 @@ body {
 h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
-  color: #000000; /* Black title color */
+  color: #000;
   display: flex;
   align-items: center;
 }
@@ -33,7 +33,9 @@ h1 img {
   margin-bottom: 1rem;
 }
 
-input[type="text"], input[type="file"], input[type="color"], input[type="checkbox"], input[type="range"] {
+input[type="file"],
+input[type="color"],
+input[type="range"] {
   width: calc(100% - 24px);
   padding: 12px;
   border: 1px solid #ddd;
@@ -42,13 +44,15 @@ input[type="text"], input[type="file"], input[type="color"], input[type="checkbo
   font-size: 1rem;
 }
 
+input[type="range"] {
+  accent-color: #ff8c00; /* Orange slider */
+}
+
 button {
   width: auto;
   padding: 12px 20px;
   border: none;
   border-radius: 6px;
-  background-color: #000000; /* Changed to black */
-  color: white;
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -56,15 +60,21 @@ button {
   margin-right: 10px;
 }
 
-button:hover {
-  background-color: #333333; /* Slightly lighter black */
+button.black {
+  background-color: #000;
+  color: #fff;
 }
 
-button.convert-image {
-  background-color: #ff8c00; /* Orange color for the convert button */
+button.black:hover {
+  background-color: #333;
 }
 
-button.convert-image:hover {
+button.orange {
+  background-color: #ff8c00;
+  color: #fff;
+}
+
+button.orange:hover {
   background-color: #e07c00;
 }
 
@@ -91,7 +101,7 @@ label {
 }
 
 .w-32 {
-  width: 8rem; /* Adjusts width for color input */
+  width: 8rem;
 }
 
 .flex {
@@ -112,49 +122,9 @@ label {
 }
 
 .mb-4 {
-  margin-bottom: 1rem; /* Adds spacing between elements */
+  margin-bottom: 1rem;
 }
 
-.bg-orange-500 {
-  background-color: #ff8c00; /* Orange color */
-}
-
-.bg-black {
-  background-color: #000000; /* Black color */
-}
-
-.bg-green-500 {
-  background-color: #28a745; /* Green color */
-}
-
-.text-white {
-  color: #ffffff; /* White text color */
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.rounded {
-  border-radius: 0.375rem; /* Rounded corners */
-}
-
-.hidden {
-  display: none;
-}
-
-.flex-align-left {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.spacing {
-  margin-top: 0.5rem;
+.align-left {
+  text-align: left;
 }
